# python

./: .gitattributes  .gitignore  Child.bat  Ektarfa.bat  connect.bat  requirements.txt  video_screenshot_program.txt
practice/: Aircrafts.py  Book_Example.py  Circle.py  CountCall.py  E12_5.py  Exercise12_3.py  Exercise12_4.py  Foo Example.py  PyWhatKit_DB.txt  Role intflag.py  Shopping_CustomerData.csv  _name.py  a.py  a2.py  abstract_example.py  all_prime_range.py  alpha_digit.py  anagram.py  animal cat dog.py  area_cylinder.py  argparser.py  array_example.py  average salary.py  bound_repeator.py  bubble.py  button_event.py  bytestring1.py  calc example.py  capital.py  captains.py  car class.py  car_namedtuple.py  card_data_class.py  cardinal direction enum.py  cards.py  cart.py  catshats.py  cel_to_farenhite.py  circle example.py  class as decorator.py  (+248 more)
practice/CLI/: actions.py  args.txt  calc.py  cooking.py  custom_action.py  divide.py  exclusive.py  ls.py  ls_argv.py  points.py  size.py  sum.py  weekdays.py
practice/NLP/: Untitled.ipynb  bag_of_words.py  count_vectorization.py  imdb.csv  imdb_example.py  main.py  name_entity.py  pyproject.toml  replace.py  spacy_example.py  spam_example.py  stem_example.py  test_data_spam.csv  textblob_classifier_example.py  tf_idf_example.py  training_spam_matrix.csv
practice/Queues/: abstract_class.py  priority_queue.py  queue_module.py  queues.py  stacks.py
practice/__pycache__/: psra.py
practice/aiohttp/: aiohttp_first.py
practice/coroutine/: asyncq.py  chained.py  coroutine_text.py  endless.py  event_loop.py  (+7 more)
(+751 files in other folders)
