[project]
name = "practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dill>=0.4.0",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pickle",
    "pymysql>=1.1.1",
    "pywhatkit>=5.4",
    "ruff>=0.11.8",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
]

[tool.uv.workspace]
members = [
    "uv",
    "pdf",
    "data_wrangling/code",
    "NLTK",
]
